# netcdf-c

./: .gitignore  .travis.yml  AUTOTUNER_README.md  CMakeInstallation.cmake  CMakeLists.txt  Makefile.am  RELEASE_NOTES.md  Vagrantfile  cf  cf.cmake  config.h.cmake.in  configure.ac  gdb-branch.txt  gdb.txt  gdb_nccopy.txt  gdb_ncdump.txt  gdb_ncgen.txt  gdb_nctest.txt  gh264.hdf  libnetcdf.settings.in  loop_test.c  nc-config.in  test-driver-verbose  test_common.in
docs/: CMakeLists.txt  Doxyfile.developer  Doxyfile.in  Makefile.am  compression.md  filter.md  filters.md  indexing.dox  inmemory.md  pario_optim.md  tutorial.dox
h5_test/: CMakeLists.txt  tst_h_atts3.c  tst_h_atts4.c  tst_h_atts_inf.c  tst_h_compounds2.c  tst_h_dimscales2.c  tst_h_dimscales3.c  tst_h_enums.c  tst_h_files.c  tst_h_par.c  tst_h_vars.c  tst_h_vars2.c  tst_h_vl.c
include/: Makefile.am  libs3.h  nc.h  nc3dispatch.h  nc3internal.h  nc4compress.h  nc4dispatch.h  nc4internal.h  nc_hashmap.h  ncdispatch.h  nchashmap.h  nchttp.h  nclistmap.h  ncs3.obsolete  ncuri.h  netcdf.h  netcdf_compress.h  netcdf_filter.h  netcdf_meta.h.in
libdap2/: cdf.c  dapdump.c  env  ncd2dispatch.c  ncd2dispatch.h
libdap4/: d4curlfunctions.c  d4file.c  d4meta.c  d4rc.c  ncd4dispatch.c
libdispatch/: CMakeLists.txt  Makefile.am  dattget.c  ddim.c  ddispatch.c  derror.c  dfile.c  dgroup.c  dhttp.c  dinternal.c  dparallel.c  drc.c  ds3.c  dsubstrate.c  dvar.c  dvarinq.c  nc.c  nc_hashmap.c  ncbytes.c  nchashmap.c  nclist.c  ncuri.c
libhdf5/: CMakeLists.txt
liblib/: CMakeLists.txt  nc_initialize.c
libsrc/: Makefile.am  attr.m4  dim.c  libs3.c  libs3uri.c  libs3uri.h  nc3dispatch.c  nc3dispatch.h  nc3internal.c  ncio.c  ncx.c  ncx.m4  putget.c  putget.m4  s3io.c  stdioio.c  v1hpg.c  var.c
libsrc4/: CMakeLists.txt  H5FDs3io.c  Makefile.am  nc4attr.c  nc4compress.c  nc4dim.c  nc4dispatch.c  nc4dispatch.h  nc4file.c  nc4grp.c  nc4hdf.c  nc4info.c  nc4internal.c  nc4mem.c  nc4memcb.c  nc4type.c  nc4var.c  ncfunc.c  nclistmap.c
libsrcp/: ncpdispatch.c
nc_test/: CMakeLists.txt  Make0  Makefile.am  large_files.c  large_files_64bit_data.c  large_files_64bit_offset.c  nc_test.c  quick_large_files.c  run_inmemory.sh  test_get.m4  test_put.m4  tests.h  tst_big_rvar.c  tst_big_var2.c  tst_big_var6.c  tst_cdf5format.c  tst_def_var_fill.c  tst_diskless_cdf5.c  tst_diskless_mem.c  tst_inmemory.c  util.c
nc_test4/: CMakeLists.txt  Make0  Makefile.am  findplugin.in  h5testszip.c  run_compress.sh  run_compress.sh.in  test_filter.c  test_filter_misc.c  test_wrapper.c  test_wrapper.in  tst_atts.c  tst_atts_diff_type.c  tst_compress.c  tst_converts.c  tst_dims3.c  tst_files.c  tst_files4.c  tst_filter.sh  tst_h_converts.c  tst_h_strbug.c  tst_h_vl2.c  tst_xplatform2.c
nccompress_test/: run_compress.sh  tst_compress.c
ncdap_test/: t_dap.c  t_dap3a.c  t_dap4.c  t_dap4a.c  test_cvt.c  test_partvar.c  test_vara.c  test_varm3.c  testurl.sh  tst_formatx.sh  tst_ncdap.sh  tst_ncdap_shared.sh  tst_remote.sh  tst_special.sh  tst_tds.sh
ncdump/: CMakeLists.txt  Make0  Makefile.am  bom.c  dddファイア.nc  gh295.cdl  nccopy.c  ncdump.c  run_utf8_tests.sh  tst_64bit.sh  tst_compression.c  tst_fileinfo.c  tst_fillbug.c  tst_gh295.sh  tst_nccopy4.sh  tst_ncgen4.sh  unicode_ncdump.c
ncgen/: CMakeLists.txt  Make0  Makefile.am  cvt.c  genbin.c  genc.c  includes.h  main.c  makeparser.sh  ncgen.h  (+5 more)
(+30 files in other folders)
